--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expensify/react-native-live-markdown": "^0.1.236",
+    "expensify-common": "^2.0.118",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "html-entities": "^2.5.2",
+    "patch-package": "^8.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-reanimated": "^3.16.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
